--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
-    "name": "q-lipe/q-lipe",
+    "name": "q-lipe/q-lipe-framework",
     "description": "a PHP Framework - Tiny & Fast - Dynamic System", 
     "type": "framework",
+    "version": "1.0.0",
     "license": "GPL-3.0",
     "authors": [
         {
