--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": ">=6"
+        "php": "^7.0.1"
     },
     "repositories": [
         {
