--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
             "email": "kittichai.malain@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
         "php": "^7.0.1"
     },
