--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,10 @@
             "type": "vcs",
             "url": "https://github.com/Framyomyim/q-lipe"
         }
-    ]
+    ],
+    "extra": {
+        "installer-paths": {
+            "admin": ["Q-Lipe"]
+        }
+    }
 }
